[package]
name = "vs-nlq"
version = "1.1.2"
authors = ["quietvoid"]
edition = "2024"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vapoursynth = { version = "0.5.0" }
dolby_vision = "3.3.2"
itertools = "0.14.0"
anyhow = "1.0.100"

[lib]
crate-type = ["cdylib"]
